Correct Alignment
Positives and colour image

--- a/Portfolio-AutismCampAustralia-CaseStudy-page/style.css
+++ b/Portfolio-AutismCampAustralia-CaseStudy-page/style.css
@@ -131,6 +131,8 @@ svg {
   max-width: 100%;
   
   display: block;
+  margin-left: auto;
+  margin-right: auto;
   
  
 }
@@ -194,7 +196,10 @@ svg {
 }
 
 .positives{
-  padding-left: 10rem;
+  justify-content: center;
+}
+.colour-ratio{
+  justify-self: center;
 }
 
 @media (max-width:55em){
@@ -202,15 +207,12 @@ svg {
     padding-left: .1rem;
   }
 
-  .colour-ratio{
-    justify-self: center;
-  }
+ 
 }
 
 .How-Might-We{
 text-align: center;
 }
-
 
  /*button */
 
